// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBarComponent Component Basics should match initial snapshot 1`] = `
<div
  id="root1"
>
  <nav
    class="flex flex-row justify-between items-center px-4 sm:px-10 py-6 border-b border-red-500 w-full"
  >
    <a
      class="flex items-center hover:cursor-pointer"
    >
      <img
        alt="logo"
        class="h-8 sm:h-10 mr-2 z-1"
        loading="lazy"
        src="/assets/images/tribunal_logo_color.png"
      />
    </a>
    <button
      aria-label="Menu"
      class="md:hidden flex flex-col space-y-1"
    >
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
    </button>
    <ul
      class="hidden md:flex flex-row gap-x-10 text-base justify-center"
    >
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Career Fair 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         CEAS EXPO 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Alumni 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Executives 
      </li>
    </ul>
    <div
      class="absolute top-16 left-0 right-0 bg-white md:hidden z-50 hidden"
    >
      <ul
        class="flex flex-col items-center space-y-4 py-4"
      >
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Career Fair 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           CEAS EXPO 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Alumni 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Executives 
        </li>
      </ul>
    </div>
  </nav>
  <router-outlet />
  
</div>
`;

exports[`NavBarComponent Menu State should toggle menu state: menu-closed 1`] = `
<div
  id="root3"
>
  <nav
    class="flex flex-row justify-between items-center px-4 sm:px-10 py-6 border-b border-red-500 w-full"
  >
    <a
      class="flex items-center hover:cursor-pointer"
    >
      <img
        alt="logo"
        class="h-8 sm:h-10 mr-2 z-1"
        loading="lazy"
        src="/assets/images/tribunal_logo_color.png"
      />
    </a>
    <button
      aria-label="Menu"
      class="md:hidden flex flex-col space-y-1"
    >
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
    </button>
    <ul
      class="hidden md:flex flex-row gap-x-10 text-base justify-center"
    >
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Career Fair 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         CEAS EXPO 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Alumni 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Executives 
      </li>
    </ul>
    <div
      class="absolute top-16 left-0 right-0 bg-white md:hidden z-50 hidden"
    >
      <ul
        class="flex flex-col items-center space-y-4 py-4"
      >
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Career Fair 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           CEAS EXPO 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Alumni 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Executives 
        </li>
      </ul>
    </div>
  </nav>
  <router-outlet />
  
</div>
`;

exports[`NavBarComponent Menu State should toggle menu state: menu-open 1`] = `
<div
  id="root3"
>
  <nav
    class="flex flex-row justify-between items-center px-4 sm:px-10 py-6 border-b border-red-500 w-full"
  >
    <a
      class="flex items-center hover:cursor-pointer"
    >
      <img
        alt="logo"
        class="h-8 sm:h-10 mr-2 z-1"
        loading="lazy"
        src="/assets/images/tribunal_logo_color.png"
      />
    </a>
    <button
      aria-label="Menu"
      class="md:hidden flex flex-col space-y-1"
    >
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
    </button>
    <ul
      class="hidden md:flex flex-row gap-x-10 text-base justify-center"
    >
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Career Fair 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         CEAS EXPO 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Alumni 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Executives 
      </li>
    </ul>
    <div
      class="absolute top-16 left-0 right-0 bg-white md:hidden z-50 hidden"
    >
      <ul
        class="flex flex-col items-center space-y-4 py-4"
      >
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Career Fair 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           CEAS EXPO 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Alumni 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Executives 
        </li>
      </ul>
    </div>
  </nav>
  <router-outlet />
  
</div>
`;

exports[`NavBarComponent Navigation Links should handle navigation link clicks: after-navigation 1`] = `
<div
  id="root7"
>
  <nav
    class="flex flex-row justify-between items-center px-4 sm:px-10 py-6 border-b border-red-500 w-full"
  >
    <a
      class="flex items-center hover:cursor-pointer"
    >
      <img
        alt="logo"
        class="h-8 sm:h-10 mr-2 z-1"
        loading="lazy"
        src="/assets/images/tribunal_logo_color.png"
      />
    </a>
    <button
      aria-label="Menu"
      class="md:hidden flex flex-col space-y-1"
    >
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
    </button>
    <ul
      class="hidden md:flex flex-row gap-x-10 text-base justify-center"
    >
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Career Fair 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         CEAS EXPO 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Alumni 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Executives 
      </li>
    </ul>
    <div
      class="absolute top-16 left-0 right-0 bg-white md:hidden z-50 hidden"
    >
      <ul
        class="flex flex-col items-center space-y-4 py-4"
      >
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Career Fair 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           CEAS EXPO 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Alumni 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Executives 
        </li>
      </ul>
    </div>
  </nav>
  <router-outlet />
  
</div>
`;

exports[`NavBarComponent Navigation Links should handle navigation link clicks: before-navigation 1`] = `
<div
  id="root7"
>
  <nav
    class="flex flex-row justify-between items-center px-4 sm:px-10 py-6 border-b border-red-500 w-full"
  >
    <a
      class="flex items-center hover:cursor-pointer"
    >
      <img
        alt="logo"
        class="h-8 sm:h-10 mr-2 z-1"
        loading="lazy"
        src="/assets/images/tribunal_logo_color.png"
      />
    </a>
    <button
      aria-label="Menu"
      class="md:hidden flex flex-col space-y-1"
    >
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
    </button>
    <ul
      class="hidden md:flex flex-row gap-x-10 text-base justify-center"
    >
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Career Fair 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         CEAS EXPO 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Alumni 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Executives 
      </li>
    </ul>
    <div
      class="absolute top-16 left-0 right-0 bg-white md:hidden z-50 hidden"
    >
      <ul
        class="flex flex-col items-center space-y-4 py-4"
      >
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Career Fair 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           CEAS EXPO 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Alumni 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Executives 
        </li>
      </ul>
    </div>
  </nav>
  <router-outlet />
  
</div>
`;

exports[`NavBarComponent User Interactions should handle menu toggle button click: after-click 1`] = `
<div
  id="root6"
>
  <nav
    class="flex flex-row justify-between items-center px-4 sm:px-10 py-6 border-b border-red-500 w-full"
  >
    <a
      class="flex items-center hover:cursor-pointer"
    >
      <img
        alt="logo"
        class="h-8 sm:h-10 mr-2 z-1"
        loading="lazy"
        src="/assets/images/tribunal_logo_color.png"
      />
    </a>
    <button
      aria-label="Menu"
      class="md:hidden flex flex-col space-y-1"
    >
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
    </button>
    <ul
      class="hidden md:flex flex-row gap-x-10 text-base justify-center"
    >
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Career Fair 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         CEAS EXPO 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Alumni 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Executives 
      </li>
    </ul>
    <div
      class="absolute top-16 left-0 right-0 bg-white md:hidden z-50"
    >
      <ul
        class="flex flex-col items-center space-y-4 py-4"
      >
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Career Fair 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           CEAS EXPO 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Alumni 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Executives 
        </li>
      </ul>
    </div>
  </nav>
  <router-outlet />
  
</div>
`;

exports[`NavBarComponent User Interactions should handle menu toggle button click: before-click 1`] = `
<div
  id="root6"
>
  <nav
    class="flex flex-row justify-between items-center px-4 sm:px-10 py-6 border-b border-red-500 w-full"
  >
    <a
      class="flex items-center hover:cursor-pointer"
    >
      <img
        alt="logo"
        class="h-8 sm:h-10 mr-2 z-1"
        loading="lazy"
        src="/assets/images/tribunal_logo_color.png"
      />
    </a>
    <button
      aria-label="Menu"
      class="md:hidden flex flex-col space-y-1"
    >
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
      <span
        class="block w-6 h-0.5 bg-gray-800"
      />
    </button>
    <ul
      class="hidden md:flex flex-row gap-x-10 text-base justify-center"
    >
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Career Fair 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         CEAS EXPO 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Alumni 
      </li>
      <li
        class="hover:border-solid hover:border-b-4 hover:border-red-500 hover:cursor-pointer"
      >
         Executives 
      </li>
    </ul>
    <div
      class="absolute top-16 left-0 right-0 bg-white md:hidden z-50 hidden"
    >
      <ul
        class="flex flex-col items-center space-y-4 py-4"
      >
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Career Fair 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           CEAS EXPO 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Alumni 
        </li>
        <li
          class="w-full text-center py-2 hover:bg-gray-100 hover:cursor-pointer"
        >
           Executives 
        </li>
      </ul>
    </div>
  </nav>
  <router-outlet />
  
</div>
`;
